==> ghi-electronics/TinyCLR-Ports/Targets/LPC17/LPC17_USART.cpp <==
#include <algorithm>
#include "LPC17.h"

const TinyCLR_Api_Info* LPC17_Uart_GetApi() {

    for (int i = 0; i < TOTAL_UART_CONTROLLERS; i++) {
        uartProviders[i] = (TinyCLR_Uart_Provider*)(uartProviderDefs + (i * sizeof(TinyCLR_Uart_Provider)));
        uartProviders[i]->Parent = &uartApi;
        uartProviders[i]->Index = i;
        uartProviders[i]->Acquire = &LPC17_Uart_Acquire;
        uartProviders[i]->Release = &LPC17_Uart_Release;
        uartProviders[i]->SetActiveSettings = &LPC17_Uart_SetActiveSettings;
        uartProviders[i]->Flush = &LPC17_Uart_Flush;
        uartProviders[i]->Read = &LPC17_Uart_Read;
        uartProviders[i]->Write = &LPC17_Uart_Write;
        uartProviders[i]->SetPinChangedHandler = &LPC17_Uart_SetPinChangedHandler;
        uartProviders[i]->SetErrorReceivedHandler = &LPC17_Uart_SetErrorReceivedHandler;
        uartProviders[i]->SetDataReceivedHandler = &LPC17_Uart_SetDataReceivedHandler;
        uartProviders[i]->GetBreakSignalState = LPC17_Uart_GetBreakSignalState;
        uartProviders[i]->SetBreakSignalState = LPC17_Uart_SetBreakSignalState;
        uartProviders[i]->GetCarrierDetectState = LPC17_Uart_GetCarrierDetectState;
        uartProviders[i]->GetClearToSendState = LPC17_Uart_GetClearToSendState;
        uartProviders[i]->GetDataReadyState = LPC17_Uart_GetDataReadyState;
        uartProviders[i]->GetIsDataTerminalReadyEnabled = LPC17_Uart_GetIsDataTerminalReadyEnabled;
        uartProviders[i]->SetIsDataTerminalReadyEnabled = LPC17_Uart_SetIsDataTerminalReadyEnabled;
        uartProviders[i]->GetIsRequestToSendEnabled = LPC17_Uart_GetIsRequestToSendEnabled;
        uartProviders[i]->SetIsRequestToSendEnabled = LPC17_Uart_SetIsRequestToSendEnabled;
        uartProviders[i]->GetReadBufferSize = LPC17_Uart_GetReadBufferSize;
        uartProviders[i]->SetReadBufferSize = LPC17_Uart_SetReadBufferSize;
        uartProviders[i]->GetWriteBufferSize = LPC17_Uart_GetWriteBufferSize;
        uartProviders[i]->SetWriteBufferSize = LPC17_Uart_SetWriteBufferSize;
    }

    uartApi.Author = "GHI Electronics, LLC";
    uartApi.Name = "GHIElectronics.TinyCLR.NativeApis.LPC17.UartProvider";
    uartApi.Type = TinyCLR_Api_Type::UartProvider;
    uartApi.Version = 0;
    uartApi.Count = TOTAL_UART_CONTROLLERS;
    uartApi.Implementation = uartProviders;

    LPC17_Uart_Reset();

    return &uartApi;
}

TinyCLR_Result LPC17_Uart_Acquire(const TinyCLR_Uart_Provider* self) {
    int32_t portNum = self->Index;

    if (portNum >= TOTAL_UART_CONTROLLERS)
        return TinyCLR_Result::ArgumentInvalid;

    DISABLE_INTERRUPTS_SCOPED(irq);

    g_UartController[portNum].txBufferCount = 0;
    g_UartController[portNum].txBufferIn = 0;
    g_UartController[portNum].txBufferOut = 0;

    g_UartController[portNum].rxBufferCount = 0;
    g_UartController[portNum].rxBufferIn = 0;
    g_UartController[portNum].rxBufferOut = 0;

    g_UartController[portNum].provider = self;

    // Enable power config
    switch (portNum) {

    case 0: LPC_SC->PCONP |= PCONP_PCUART0; break;

    case 1: LPC_SC->PCONP |= PCONP_PCUART1; break;

    case 2: LPC_SC->PCONP |= PCONP_PCUART2; break;

    case 3: LPC_SC->PCONP |= PCONP_PCUART3; break;

    case 4: LPC_SC->PCONP |= PCONP_PCUART4; break;

    }

    int32_t txPin = LPC17_Uart_GetTxPin(portNum);
    int32_t rxPin = LPC17_Uart_GetRxPin(portNum);

    if (!LPC17_Gpio_OpenPin(txPin) || !LPC17_Gpio_OpenPin(rxPin))
        return TinyCLR_Result::SharingViolation;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Uart_SetActiveSettings(const TinyCLR_Uart_Provider* self, uint32_t baudRate, uint32_t dataBits, TinyCLR_Uart_Parity parity, TinyCLR_Uart_StopBitCount stopBits, TinyCLR_Uart_Handshake handshaking) {

    DISABLE_INTERRUPTS_SCOPED(irq);

    int32_t portNum = self->Index;

    LPC17xx_USART& USARTC = LPC17xx_USART::UART(portNum);

    uint32_t     divisor;

    uint32_t fdr;

    switch (baudRate) {

    case 9600: LPC17_Uart_SetClock(portNum, 0); fdr = 0x54; divisor = 217; break;

    case 14400: LPC17_Uart_SetClock(portNum, 0); fdr = 81; divisor = 217; break;

    case 19200: LPC17_Uart_SetClock(portNum, 0); fdr = 177; divisor = 179; break;

    case 38400: LPC17_Uart_SetClock(portNum, 0); fdr = 131; divisor = 71; break;

    case 57600: LPC17_Uart_SetClock(portNum, 0); fdr = 213; divisor = 47; break;

    case 115200: LPC17_Uart_SetClock(portNum, 0); fdr = 117; divisor = 19; break;

    case 230400: LPC17_Uart_SetClock(portNum, 0); fdr = 229; divisor = 12; break;

    case 460800: LPC17_Uart_SetClock(portNum, 1); fdr = 229; divisor = 6; break;

    case 921600: LPC17_Uart_SetClock(portNum, 1); fdr = 229; divisor = 3; break;

    default:
        LPC17_Uart_SetClock(portNum, 1);
        divisor = ((LPC17xx_USART::c_ClockRate / (baudRate * 16)));
        fdr = 0x10;
        break;

    }

    // CWS: Disable interrupts
    USARTC.UART_LCR = 0; // prepare to Init UART
    USARTC.SEL2.IER.UART_IER &= ~(LPC17xx_USART::UART_IER_INTR_ALL_SET);          // Disable all UART interrupts
    /* CWS: Set baud rate to baudRate bps */
    USARTC.UART_LCR |= LPC17xx_USART::UART_LCR_DLAB;                              // prepare to access Divisor
    USARTC.SEL1.DLL.UART_DLL = divisor & 0xFF;      //GET_LSB(divisor);                                                      // Set baudrate.
    USARTC.SEL2.DLM.UART_DLM = (divisor >> 8) & 0xFF; // GET_MSB(divisor);
    USARTC.UART_LCR &= ~LPC17xx_USART::UART_LCR_DLAB;                                              // prepare to access RBR, THR, IER
    // CWS: Set port for 8 bit, 1 stop, no parity
    USARTC.UART_FDR = fdr;

    // DataBit range 5-8
    if (5 <= dataBits && dataBits <= 8) {
        SET_BITS(USARTC.UART_LCR, LPC17xx_USART::UART_LCR_WLS_shift, LPC17xx_USART::UART_LCR_WLS_mask, dataBits - 5);
    }
    else {   // not supported
     // set up 8 data bits incase return value is ignored
        SET_BITS(USARTC.UART_LCR, LPC17xx_USART::UART_LCR_WLS_shift, LPC17xx_USART::UART_LCR_WLS_mask, LPC17xx_USART::UART_LCR_WLS_8_BITS);
        return TinyCLR_Result::NotSupported;
    }

    switch (stopBits) {
    case TinyCLR_Uart_StopBitCount::Two:
        USARTC.UART_LCR |= LPC17xx_USART::UART_LCR_NSB_15_STOPBITS;

        if (dataBits == 5)
            return TinyCLR_Result::NotSupported;
        break;

    case TinyCLR_Uart_StopBitCount::One:
        USARTC.UART_LCR |= LPC17xx_USART::UART_LCR_NSB_1_STOPBITS;
        break;

    case TinyCLR_Uart_StopBitCount::OnePointFive:
        USARTC.UART_LCR |= LPC17xx_USART::UART_LCR_NSB_15_STOPBITS;

        if (dataBits != 5)
            return TinyCLR_Result::NotSupported;
        break;

    default:
        return TinyCLR_Result::NotSupported;
    }

    switch (parity) {

    case TinyCLR_Uart_Parity::Space:
        USARTC.UART_LCR |= LPC17xx_USART::UART_LCR_SPE;

    case TinyCLR_Uart_Parity::Even:
        USARTC.UART_LCR |= (LPC17xx_USART::UART_LCR_EPE | LPC17xx_USART::UART_LCR_PBE);

        break;

    case TinyCLR_Uart_Parity::Mark:
        USARTC.UART_LCR |= LPC17xx_USART::UART_LCR_SPE;

    case  TinyCLR_Uart_Parity::Odd:
        USARTC.UART_LCR |= LPC17xx_USART::UART_LCR_PBE;

        break;

    case TinyCLR_Uart_Parity::None:

        USARTC.UART_LCR &= ~LPC17xx_USART::UART_LCR_PBE;

        break;

    default:

        return TinyCLR_Result::NotSupported;
    }

    if (handshaking != TinyCLR_Uart_Handshake::None && portNum != 1) // Only port 2 support handshaking
        return TinyCLR_Result::NotSupported;


    switch (handshaking) {
    case TinyCLR_Uart_Handshake::RequestToSend:
        USARTC.UART_MCR |= (1 << 6) | (1 << 7);  // Enable CTS - RTS
        USARTC.SEL2.IER.UART_IER |= (1 << 7) | (1 << 3);    // Enable Interrupt CTS
        g_UartController[portNum].handshakeEnable = true;
        break;

    case TinyCLR_Uart_Handshake::XOnXOff:
    case TinyCLR_Uart_Handshake::RequestToSendXOnXOff:
        return TinyCLR_Result::NotSupported;
    }

    // CWS: Set the RX FIFO trigger level (to 8 bytes), reset RX, TX FIFO
    USARTC.SEL3.FCR.UART_FCR = (LPC17xx_USART::UART_FCR_RFITL_01 >> LPC17xx_USART::UART_FCR_RFITL_shift) |
        LPC17xx_USART::UART_FCR_TFR |
        LPC17xx_USART::UART_FCR_RFR |
        LPC17xx_USART::UART_FCR_FME;

    switch (portNum) {
    case 0:
        LPC17_Interrupt_Activate(UART0_IRQn, (uint32_t*)&UART0_IntHandler, 0);

        break;

    case 1:
        LPC17_Interrupt_Activate(UART1_IRQn, (uint32_t*)&UART1_IntHandler, 0);

        break;

    case 2:
        LPC17_Interrupt_Activate(UART2_IRQn, (uint32_t*)&UART2_IntHandler, 0);

        break;

    case 3:
        LPC17_Interrupt_Activate(UART3_IRQn, (uint32_t*)&UART3_IntHandler, 0);

        break;

    case 4:
        LPC17_Interrupt_Activate(UART4_IRQn, (uint32_t*)&UART4_IntHandler, 0);

        break;

    default:
        return TinyCLR_Result::ArgumentOutOfRange;
    }

    auto memoryProvider = (const TinyCLR_Memory_Provider*)apiProvider->FindDefault(apiProvider, TinyCLR_Api_Type::MemoryProvider);

    if (g_UartController[portNum].txBufferSize == 0) {
        g_UartController[portNum].txBufferSize = g_LPC17_Uart_TxDefaultBuffersSize[portNum];

        g_UartController[self->Index].TxBuffer = (uint8_t*)memoryProvider->Allocate(memoryProvider, g_UartController[portNum].txBufferSize);

        if (g_UartController[self->Index].TxBuffer == nullptr) {
            g_UartController[self->Index].txBufferSize = 0;

            return TinyCLR_Result::OutOfMemory;
        }
    }

    if (g_UartController[portNum].rxBufferSize == 0) {
        g_UartController[portNum].rxBufferSize = g_LPC17_Uart_RxDefaultBuffersSize[portNum];

        g_UartController[self->Index].RxBuffer = (uint8_t*)memoryProvider->Allocate(memoryProvider, g_UartController[portNum].rxBufferSize);

        if (g_UartController[self->Index].RxBuffer == nullptr) {
            g_UartController[self->Index].rxBufferSize = 0;

            return TinyCLR_Result::OutOfMemory;
        }
    }

    USARTC.UART_TER = LPC17xx_USART::UART_TER_TXEN;

    LPC17_Uart_PinConfiguration(portNum, true);

    g_UartController[portNum].isOpened = true;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Uart_Release(const TinyCLR_Uart_Provider* self) {
    DISABLE_INTERRUPTS_SCOPED(irq);

    if (self == nullptr)
        return TinyCLR_Result::ArgumentNull;

    int32_t portNum = self->Index;

    LPC17xx_USART& USARTC = LPC17xx_USART::UART(portNum);

    if (g_UartController[portNum].isOpened == true) {

        USARTC.SEL2.IER.UART_IER &= ~(LPC17xx_USART::UART_IER_INTR_ALL_SET);         // Disable all UART interrupt

        // CWS: Disable interrupts
        USARTC.SEL3.FCR.UART_FCR = 0;
        USARTC.UART_LCR = 0; // prepare to Init UART

        if (g_UartController[portNum].handshakeEnable) {
            USARTC.UART_MCR &= ~((1 << 6) | (1 << 7));
            USARTC.SEL2.IER.UART_IER &= ~((1 << 7) | (1 << 3));
        }

        LPC17_Uart_PinConfiguration(portNum, false);

        // Disable to save power
        switch (portNum) {

        case 0: LPC_SC->PCONP &= ~PCONP_PCUART0; break;

        case 1: LPC_SC->PCONP &= ~PCONP_PCUART1; break;

        case 2: LPC_SC->PCONP &= ~PCONP_PCUART2; break;

        case 3: LPC_SC->PCONP &= ~PCONP_PCUART3; break;

        case 4: LPC_SC->PCONP &= ~PCONP_PCUART4; break;
        }


    }

    g_UartController[portNum].txBufferCount = 0;
    g_UartController[portNum].txBufferIn = 0;
    g_UartController[portNum].txBufferOut = 0;

    g_UartController[portNum].rxBufferCount = 0;
    g_UartController[portNum].rxBufferIn = 0;
    g_UartController[portNum].rxBufferOut = 0;
    if (apiProvider != nullptr) {
        auto memoryProvider = (const TinyCLR_Memory_Provider*)apiProvider->FindDefault(apiProvider, TinyCLR_Api_Type::MemoryProvider);

        if (g_UartController[self->Index].txBufferSize != 0) {
            memoryProvider->Free(memoryProvider, g_UartController[self->Index].TxBuffer);

            g_UartController[self->Index].txBufferSize = 0;
        }

        if (g_UartController[self->Index].rxBufferSize != 0) {
            memoryProvider->Free(memoryProvider, g_UartController[self->Index].RxBuffer);

            g_UartController[self->Index].rxBufferSize = 0;
        }
    }

    g_UartController[portNum].isOpened = false;
    g_UartController[portNum].handshakeEnable = false;

    return TinyCLR_Result::Success;
}

void LPC17_Uart_TxBufferEmptyInterruptEnable(int portNum, bool enable) {
    DISABLE_INTERRUPTS_SCOPED(irq);

    LPC17xx_USART& USARTC = LPC17xx_USART::UART(portNum);

    if (enable) {
        USARTC.UART_LCR &= (~LPC17xx_USART::UART_LCR_DLAB);
        USARTC.SEL2.IER.UART_IER |= (LPC17xx_USART::UART_IER_THREIE);

        LPC17xx_USART& USARTC = LPC17xx_USART::UART(portNum);

        volatile uint32_t LSR_Value = USARTC.UART_LSR;           // Store LSR value since it's Read-to-Clear
        volatile uint32_t IIR_Value = USARTC.SEL3.IIR.UART_IIR & LPC17xx_USART::UART_IIR_IID_mask;

        LPC17_Uart_TransmitData(portNum, LSR_Value, IIR_Value);
    }
    else {
        USARTC.SEL2.IER.UART_IER &= ~(LPC17xx_USART::UART_IER_THREIE);
    }
}

void LPC17_Uart_RxBufferFullInterruptEnable(int portNum, bool enable) {
    DISABLE_INTERRUPTS_SCOPED(irq);

    LPC17xx_USART& USARTC = LPC17xx_USART::UART(portNum);

    if (enable)
        USARTC.SEL2.IER.UART_IER |= (LPC17xx_USART::UART_IER_RDAIE);
    else
        USARTC.SEL2.IER.UART_IER &= ~(LPC17xx_USART::UART_IER_RDAIE);
}

TinyCLR_Result LPC17_Uart_Flush(const TinyCLR_Uart_Provider* self) {
    int32_t portNum = self->Index;

    if (g_UartController[portNum].isOpened == false)
        return TinyCLR_Result::NotAvailable;

    // Make sute interrupt is enable
    LPC17_Uart_TxBufferEmptyInterruptEnable(portNum, true);

    while (g_UartController[portNum].txBufferCount > 0) {
        LPC17_Time_Delay(nullptr, 1);
    }

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Uart_Read(const TinyCLR_Uart_Provider* self, uint8_t* buffer, size_t& length) {
    int32_t portNum = self->Index;
    size_t i = 0;;

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (g_UartController[portNum].isOpened == false || g_UartController[self->Index].rxBufferSize == 0) {
        length = 0;

        return TinyCLR_Result::NotAvailable;
    }

    length = std::min(g_UartController[portNum].rxBufferCount, length);

    while (i < length) {
        buffer[i] = g_UartController[portNum].RxBuffer[g_UartController[portNum].rxBufferOut];

        g_UartController[portNum].rxBufferOut++;
        i++;
        g_UartController[portNum].rxBufferCount--;

        if (g_UartController[portNum].rxBufferOut == g_UartController[portNum].rxBufferSize)
            g_UartController[portNum].rxBufferOut = 0;
    }

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_Uart_Write(const TinyCLR_Uart_Provider* self, const uint8_t* buffer, size_t& length) {
    int32_t portNum = self->Index;
    int32_t i = 0;

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (g_UartController[portNum].isOpened == false || g_UartController[self->Index].txBufferSize == 0) {
        length = 0;

        return TinyCLR_Result::NotAvailable;
    }

    if (g_UartController[portNum].txBufferCount == g_UartController[portNum].txBufferSize) {
        UART_SetErrorEvent(portNum, TinyCLR_Uart_Error::TransmitFull);

        return TinyCLR_Result::Busy;
    }

    length = std::min(g_UartController[portNum].txBufferSize - g_UartController[portNum].txBufferCount, length);


    while (i < length) {

        g_UartController[portNum].TxBuffer[g_UartController[portNum].txBufferIn] = buffer[i];

        g_UartController[portNum].txBufferCount++;

        i++;

        g_UartController[portNum].txBufferIn++;

        if (g_UartController[portNum].txBufferIn == g_UartController[portNum].txBufferSize)
            g_UartController[portNum].txBufferIn = 0;
    }

    if (length > 0) {
        LPC17_Uart_TxBufferEmptyInterruptEnable(portNum, true); // Enable Tx to start transfer
    }

    return TinyCLR_Result::Success;
}

void LPC17_Uart_Reset() {
    for (auto i = 0; i < TOTAL_UART_CONTROLLERS; i++) {
        g_UartController[i].txBufferSize = 0;
        g_UartController[i].rxBufferSize = 0;

        LPC17_Uart_Release(uartProviders[i]);
    }
}
